svs 17.08.2016 20:23:57 +0300 - build 4759

1. SQLite 3.14.1

drkns 15.08.2016 09:23:14 +0200 - build 4758

1. Более параноидальные опции для GCC.

drkns 14.08.2016 15:28:56 +0200 - build 4757

1. Рефакторинг всего, связанного с кодировками.

2. -flto для GCC. Far.exe внезапно похудел аж на ~750 K.

drkns 13.08.2016 17:07:34 +0200 - build 4756

1. Ещё одно уточнение 4747.

svs 09.08.2016 10:31:09 +0300 - build 4755

1. SQLite 3.14.0

drkns 08.08.2016 23:38:23 +0200 - build 4754

1. Рефакторинг.

drkns 07.08.2016 21:59:50 +0200 - build 4753

1. После 4747 не работали адаптеры.

drkns 07.08.2016 15:01:50 +0200 - build 4752

1. Пара оптимизаций работы с буфером обмена.

drkns 06.08.2016 14:56:47 +0200 - build 4751

1. Уточнение обработки некорректных hex-строк в диалогах.

2. В одном из предыдущих билдов погнулась диагностика исключений.

drkns 04.08.2016 22:16:44 +0200 - build 4750

1. Уточнение 4748.

drkns 03.08.2016 23:30:06 +0200 - build 4749

1. Вместо %1, %2, %3... в коде и языковых файлах теперь {0}, {1}, {2}...
   Если у вас были свои lng - в них надо сделать замену первого на второе.

drkns 02.08.2016 22:18:59 +0200 - build 4748

1. Рефакторинг.

drkns 30.07.2016 21:27:07 +0200 - build 4747

1. Рефакторинг.

zg 30.07.2016 20:43:15 +0200 - build 4746

1. [Wishes 0002857]: Распознавать нажатия сочетаний нескольких модификаторов.

drkns 29.07.2016 01:34:39 +0200 - build 4745

1. Файловые панели зачем-то физически перечитывали свое содержимое (со всеми побочными эффектами, типа внезапной смены текущего каталога процесса) при простой перерисовке окна,
   которая, в общем случае, может произойти когда угодно. О сколько нам открытий чудных...

drkns 23.07.2016 12:48:09 +0200 - build 4744

1. Не сбрасываем цвет текста при вложенных вызовах FCTL_GETUSERSCREEN.

drkns 16.07.2016 13:51:54 +0200 - build 4743

1. Иногда, если очень повезёт, вызов редактора после работы с панельным плагином мог приводить к падению.

drkns 09.07.2016 22:56:35 +0200 - build 4742
