@@ -112,7 +112,6 @@ void Edit::DisplayObject()
 {
 	if (m_Flags.Check(FEDITLINE_DROPDOWNBOX))
 	{
-		m_Flags.Clear(FEDITLINE_CLEARFLAG);  // при дроп-даун нам не нужно никакого unchanged text
 		m_SelStart=0;
 		m_SelEnd = m_Str.size(); // а также считаем что все выделено -
 		//    надо же отличаться от обычных Edit
@@ -486,7 +485,7 @@ __int64 Edit::VMProcess(int OpCode,void *vParam,__int64 iParam)
 		case MCODE_F_EDITOR_SEL:
 		{
 			int Action=(int)((intptr_t)vParam);
-			if (Action) SetClearFlag(0);
+			if (Action) m_Flags.Clear(FEDITLINE_CLEARFLAG);
 
 			switch (Action)
 			{
@@ -675,17 +674,6 @@ int Edit::ProcessKey(const Manager::Key& Key)
 	{
 		Show();
 		return TRUE;
-	}
-
-	if (m_Flags.Check(FEDITLINE_CLEARFLAG) && LocalKey!=KEY_NONE && LocalKey!=KEY_IDLE && LocalKey!=KEY_SHIFTINS && LocalKey!=KEY_SHIFTNUMPAD0 && (LocalKey!=KEY_CTRLINS && LocalKey!=KEY_RCTRLINS) &&
-	        ((unsigned int)LocalKey<KEY_F1 || (unsigned int)LocalKey>KEY_F12) && LocalKey!=KEY_ALT && LocalKey!=KEY_SHIFT &&
-	        LocalKey!=KEY_CTRL && LocalKey!=KEY_RALT && LocalKey!=KEY_RCTRL &&
-	        LocalKey!=KEY_CAPSLOCK && LocalKey!=KEY_NUMLOCK && LocalKey!=KEY_SCROLLLOCK &&
-	        !((LocalKey>=KEY_ALT_BASE && LocalKey <= KEY_ALT_BASE+0xFFFF) || (LocalKey>=KEY_RALT_BASE && LocalKey <= KEY_RALT_BASE+0xFFFF)) && // ???? 256 ???
-	        !(((unsigned int)LocalKey>=KEY_MACRO_BASE && (unsigned int)LocalKey<=KEY_MACRO_ENDBASE) || ((unsigned int)LocalKey>=KEY_OP_BASE && (unsigned int)LocalKey <=KEY_OP_ENDBASE)) &&
-	        (LocalKey!=KEY_CTRLQ && LocalKey!=KEY_RCTRLQ))
-	{
-		m_Flags.Clear(FEDITLINE_CLEARFLAG);
 	}
 
 	switch (LocalKey)
@@ -1351,16 +1339,6 @@ int Edit::ProcessCtrlQ()
 		}
 	}
 
-	/*
-	  EditOutDisabled++;
-	  if (!Flags.Check(FEDITLINE_PERSISTENTBLOCKS))
-	  {
-	    DeleteBlock();
-	  }
-	  else
-	    Flags.Clear(FEDITLINE_CLEARFLAG);
-	  EditOutDisabled--;
-	*/
 	return InsertKey(rec.Event.KeyEvent.uChar.AsciiChar);
 }
 
