@@ -150,8 +150,6 @@ public:
 	void ClearString() { SetString(L"", 0); }
 
 	int Search(const string& Str,const string &UpperStr, const string &LowerStr, RegExp &re, RegExpMatch *pm, MatchHash* hm, string& ReplaceStr,int Position,int Case,int WholeWords,int Reverse,int Regexp,int PreserveStyle, int *SearchLength);
-	void SetClearFlag(bool Flag) {m_Flags.Change(FEDITLINE_CLEARFLAG,Flag);}
-	int GetClearFlag() const {return m_Flags.Check(FEDITLINE_CLEARFLAG);}
 	void SetCurPos(int NewPos) {m_CurPos=NewPos; SetPrevCurPos(NewPos);}
 	void AdjustMarkBlock();
 	void AdjustPersistentMark();
